# eclipse

./: .editorconfig  .gitignore  .gitmodules  ACHIEVEMENT_96_PERCENT.md  AHCI_SATA_NVME_IMPROVEMENTS.md  ALGORITMOS_FILESYSTEM.md  AUDIO_SERVICE_IMPLEMENTATION.md  BUILD_GUIDE.md  BULK_READ_OPTIMIZATION.md  CARACTERISTICAS_MODERNAS_FS.md  CARGA_AUTOMATICA_DRIVERS.md  CHANGELOG.md  COMO_PROCEDER.md  COMPILAR_GPU_DRIVERS.md  COMPILAR_PARA_RTX2060.md  COMPLETE_ACHIEVEMENT_SUMMARY.md  COMPLETE_REVIEW_SUMMARY.md  COMPLETION_SUMMARY.md  CONTINUACION_COMPLETA_ES.md  CONTINUACION_FINAL_VIRTIO.md  CONTINUACION_VIRTIO_COMPLETA.md  CONTINUAMOS_2_SUMMARY.md  CONTINUAMOS_3_SUMMARY.md  CONTINUAMOS_VIRTIO_SUMMARY.md  CONTINUATION_SESSION_SUMMARY.md  CONTRIBUTING.md  CORRECCION_DEPENDENCIAS.md  COSMIC_MIGRATION_SUMMARY.md  CURRENT_STATUS.md  Cargo.toml  DEVICE_SERVICE_INIT_INTEGRATION.md  DIAGNOSTICO_RTX2060.md  DRIVERS_GPU_FINAL.md  DRIVERS_GPU_LISTOS.md  DRIVERS_GPU_SIMPLIFICADOS.md  DRIVER_STATUS.md  ECLIPSEFS_BLOCK_READ_FIX.md  ECLIPSEFS_INIT_FIX.md  ECLIPSEFS_SUMMARY.md  ECLIPSEFS_USABILITY_IMPROVEMENTS.md  (+181 more)
bootloader-uefi/: Cargo.toml  build.sh
bootloader-uefi/.cargo/: config.toml
bootloader-uefi/src/: bootloader.rs  bootloader_final.rs  bootloader_minimal.rs  bootloader_simple.rs  bootloader_stable.rs  bootloader_success.rs  bootloader_working.rs  main.rs  progress.rs  test.rs
bootloader-uefi/target_hardware/: .rustc_info.json
eclipse-apps/: Cargo.toml  build_errors.txt  build_final.txt  build_final_verification.txt  build_init.sh  build_out.txt  build_v2.txt  build_v3.txt  linker.ld  test_init.sh  x86_64-unknown-eclipse.json
eclipse-apps/.cargo/: config.toml
eclipse-apps/bash/: Makefile  bash  bashbug  bashversion  config.h  config.status  eval.c  mksignames  mksyntax  pathnames.h  pwd.h  shell.c  version.h
eclipse-apps/coreutils/: Makefile  cat.c  echo.c  ls.c
eclipse-apps/demo_client/: Cargo.toml
eclipse-apps/eclipse-labwc/: Cargo.toml  README.md
eclipse-apps/eclipse_std/: Cargo.toml  README.md  build_errors.txt  build_errors_v2.txt  build_errors_v3.txt  build_out.txt
eclipse-apps/gl_demo/: Cargo.toml
eclipse-apps/glxgears/: Cargo.toml  build.rs
eclipse-apps/input_test/: Cargo.toml  run_host.sh
eclipse-apps/labwc/: musl-target.txt  native.txt
eclipse-apps/lunas/: Cargo.toml
eclipse-apps/nano/: Cargo.toml
eclipse-apps/rust-shell/: Cargo.toml
eclipse-apps/s6/: Cargo.toml  README.md  install_s6.sh
eclipse-apps/sh/: Cargo.toml
eclipse-apps/sidewind/: Cargo.toml
eclipse-apps/sidewind_core/: Cargo.toml
eclipse-apps/sidewind_nvidia/: Cargo.toml
eclipse-apps/sidewind_opengl/: Cargo.toml
eclipse-apps/sidewind_sdk/: Cargo.toml
eclipse-apps/sidewind_wayland/: Cargo.toml
eclipse-apps/sidewind_wgpu/: Cargo.toml
eclipse-apps/sidewind_xwayland/: Cargo.toml
eclipse-apps/smithay_app/: Cargo.toml  README.md  TECHNICAL.md  XFWL4_REFERENCE.md  build_hosted_test.txt  build_hosted_test_2.txt  convert_icon.py  linker.ld  smithay_errors.txt  smithay_errors_2.txt  smithay_errors_3.txt  smithay_errors_refine_2.txt
eclipse-apps/std_test/: Cargo.toml
eclipse-apps/systemd/: Cargo.toml  DEPRECATED.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION.md  README.md  build.rs  install_systemd.sh  linker.ld  test_systemd.sh
eclipse-apps/terminal/: Cargo.toml  build.rs
eclipse-apps/wayland_handshake/: Cargo.toml
eclipse-apps/x11_bridge_test/: Cargo.toml
eclipse-apps/xeyes/: Cargo.toml
eclipse-libc/: Cargo.toml  README.md
eclipse-libc/src/: alloc.rs  c_str.rs  internal_alloc.rs  lib.rs  posix_stubs.s  types.rs
eclipse-relibc/: ARCHITECTURE.md  Cargo.toml  README.md
eclipse-relibc/.cargo/: config.toml
eclipse-relibc/include/: assert.h  ctype.h  dirent.h  errno.h  fcntl.h  grp.h  limits.h  locale.h  math.h  poll.h  pwd.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  termios.h  time.h  ulimit.h  unistd.h  wchar.h
eclipse-relibc/src/: internal_alloc.rs  lib.rs  posix_stubs.s  posix_stubs_nostart.s  stack_chk.rs  sysroot_symbols.rs  types.rs
eclipse-syscall/: Cargo.toml  README.md
eclipse-syscall/src/: call.rs  error.rs  flag.rs  flag.rs.bak  lib.rs  number.rs
eclipse_kernel/: ANALISIS_USO_KERNEL.md  BOOT_MESSAGES_SUMMARY.md  BUILD_SUCCESS.md  COMPLETE_IMPLEMENTATION.md  COMPLETION_SUMMARY.md  Cargo.toml  FINAL_STATUS.md  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  INTEGRACION_MODULOS.md  INTEGRATION_GUIDE.md  INTEGRATION_PLAN.md  README.md  SOLUCION_VGA.md  SYSTEMD_INTEGRATION.md  build.rs  build.sh  build_kernel_uefi.sh  build_log.txt  build_simple.sh  build_with_systemd.sh  check_output.txt  cleanup_warnings.sh  cleanup_warnings_advanced.sh  demo_serial.sh  fix_compilation_errors.sh  fix_format.sh  fix_variables.sh  kernel.asm  kernel_dump.txt  kernel_new.asm  linker.ld  multiboot.ld  multiboot2.ld  multiboot2_header.asm  start.asm  switch_dump.txt  symbols.txt  test.sh  (+6 more)
eclipse_kernel/.cargo/: config.toml
eclipse_kernel/src/: acpi.rs  advanced_security.rs  advanced_shell.rs  ahci.rs  ai_advanced.rs  ai_commands.rs  ai_communication.rs  ai_control.rs  ai_core.rs  ai_demo.rs  ai_demo_simple.rs  ai_desktop_integration.rs  ai_inference.rs  ai_inference_engine.rs  ai_integrated.rs  ai_integration.rs  ai_interface.rs  ai_learning.rs  ai_model_demo.rs  ai_models_global.rs  ai_optimizer.rs  ai_pretrained_models.rs  ai_services.rs  ai_shell.rs  ai_simple_demo.rs  apic.rs  (+134 more)
eclipsefs/: Cargo.toml  README.md
eclipsefs-cli/: Cargo.toml
eclipsefs-fuse/: Cargo.toml
eclipsefs-lib/: COMPLETION_SUMMARY.md  Cargo.toml  FEATURE_SUMMARY_v0.3.0.md  IMPROVEMENTS.md  SECURITY.md  TOOLS_README.md  debug_image.rs  test_eclipsefs.img
hunter/: Cargo.toml
installer/: Cargo.toml  OVMF_VARS.fd  build_error.txt  build_output.txt
installer-lib/: Cargo.toml
mkfs-eclipsefs/: Cargo.toml  README.md
nvidia-rm-sys/: Cargo.toml  build.rs
userland/: Cargo.toml  MICROKERNEL_SERVERS.md  build-userland.sh  build.sh  build_drm.sh  eclipse-toolchain.cmake  lib.rs  test_complete_system.sh  test_userland.sh
(+3378 files in other folders)
