[package]
name = "eclipse-bootloader-uefi"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "eclipse-bootloader"
path = "src/main.rs"

[dependencies]
uefi = "0.25.0"

[profile.dev]
panic = "abort"
lto = true
codegen-units = 1
opt-level = "s"

[package.metadata.cargo-xbuild]
sysroot_path = "sysroot"
