[workspace]
resolver = "2"
members = [
    "eclipse_std",
    "sidewind",
    "sidewind_core",
    "libs/ipc",
    "lunas",
    "terminal",
    "sh",
    "nano",
    "glxgears",
]
# glium es el crate upstream (winit/glutin/Wayland); no compila para `x86_64-unknown-eclipse`.
exclude = ["libs/ipc_tests", "smithay_app", "xfwl4"]

[workspace.package]
version = "0.2.0"
authors = ["Eclipse OS Team"]
edition = "2021"
license = "MIT"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"

[workspace.dependencies]
eclipse_ipc = { path = "libs/ipc" }
sidewind = { path = "sidewind" }
sidewind_core = { path = "sidewind_core" }
# Sin `std` por defecto: el target Eclipse usa build-std=core,alloc y eclipse_std como `std`
# solo para binarios que la enlazan; las libs no_std no deben forzar `bitflags/std`.
bitflags = { version = "2.4", default-features = false }

[profile.release]
# IMPORTANTE: Este es el lugar correcto para configurar perfiles en un workspace.
# Las secciones [profile.*] en paquetes miembro (p. ej. smithay_app/Cargo.toml)
# son ignoradas silenciosamente por Cargo; cualquier cambio debe hacerse aquí.
#
# debug=false + strip="symbols" reducen el binario de ~75 MB a ~3.5 MB:
#   - Pasan de cientos de segmentos PT_LOAD ELF a solo 4.
#   - El número de VMAs al arrancar cae de cientos/miles a ~20–25.
#   - Esto evita que mprotect() falle con ENOMEM al configurar el alt-signal-stack
#     del runtime de Rust (stack_overflow.rs), que se manifestaba como:
#       "failed to set up alternative stack guard page: Cannot allocate memory"
panic = "abort"
lto = "off"
opt-level = "s"
codegen-units = 1
debug = false
strip = "symbols"

[profile.dev]
opt-level = "s"
panic = "abort"

[patch.crates-io]
libc = { path = "../eclipse-relibc" }
std = { package = "eclipse_std", path = "eclipse_std" }
libloading = { path = "libs/libloading" }

[patch.crates-io.gettext-rs]
path = "libs/gettext-rs-stub"
[patch.crates-io.gettext-sys]
path = "libs/gettext-sys-stub"
[patch.crates-io.libudev-sys]
path = "libs/libudev-sys-stub"
[patch.crates-io.libseat-sys]
path = "libs/libseat-sys-stub"
[patch.crates-io.libdisplay-info-sys]
path = "libs/libdisplay-info-sys-stub"
[patch.crates-io.input-sys]
path = "libs/input-sys-stub"
[patch.crates-io.pixman-sys]
path = "libs/pixman-sys-stub"
[patch.crates-io.gbm-sys]
path = "libs/gbm-sys-stub"
[patch.crates-io.drm-sys]
path = "libs/drm-sys-stub"
[patch.crates-io.glib-sys]
path = "libs/glib-sys-stub"
[patch.crates-io.gobject-sys]
path = "libs/gobject-sys-stub"
[patch.crates-io.gio-sys]
path = "libs/gio-sys-stub"
[patch.crates-io.gmodule-sys]
path = "libs/gmodule-sys-stub"
[patch.crates-io.pango-sys]
path = "libs/pango-sys-stub"
[patch.crates-io.cairo-sys-rs]
path = "libs/cairo-sys-stub"
[patch.crates-io.gdk-pixbuf-sys]
path = "libs/gdk-pixbuf-sys-stub"
[patch.crates-io.gdk-sys]
path = "libs/gdk-sys-stub"
[patch.crates-io.gtk-sys]
path = "libs/gtk-sys-stub"
[patch.crates-io.atk-sys]
path = "libs/atk-sys-stub"
[patch.crates-io.once_cell]
path = "libs/once_cell_stub"
[patch.crates-io.libxfce4util-sys]
path = "libs/libxfce4util-sys-stub"
[patch.crates-io.libxfce4ui-sys]
path = "libs/libxfce4ui-sys-stub"
[patch.crates-io.xfconf-sys]
path = "libs/xfconf-sys-stub"
[patch.crates-io.libxfce4kbd-private-sys]
path = "libs/libxfce4kbd-private-sys-stub"
[patch.crates-io.exo-sys]
path = "libs/exo-sys-stub"
