[workspace]
resolver = "2"
members = [
    "eclipse_std",
    "sidewind",
    "sidewind_core",
    "sidewind_nvidia",
    "libs/ipc",
    "lunas",
    "terminal",
    "sh",
    "rust-shell",
    "nano",
    "glxgears",
#    "xeyes",
]
exclude = ["libs/ipc_tests", "smithay_app", "nanorust", "xeyes"]

[workspace.package]
version = "0.2.0"
authors = ["Eclipse OS Team"]
edition = "2021"
license = "MIT"

[workspace.lints.rust]
rust_2018_idioms = { level = "deny", priority = -1 }
unused_results = "deny"

[workspace.lints.clippy]
type-complexity = "allow"

[workspace.lints.rustdoc]
broken_intra_doc_links = "forbid"

[workspace.dependencies]
eclipse_ipc = { path = "libs/ipc" }
sidewind = { path = "sidewind" }
sidewind_core = { path = "sidewind_core" }
# Sin `std` por defecto: el target Eclipse usa build-std=core,alloc y eclipse_std como `std`
# solo para binarios que la enlazan; las libs no_std no deben forzar `bitflags/std`.
bitflags = { version = "2.4", default-features = false }

[profile.release]
# IMPORTANTE: Este es el lugar correcto para configurar perfiles en un workspace.
# Las secciones [profile.*] en paquetes miembro (p. ej. smithay_app/Cargo.toml)
# son ignoradas silenciosamente por Cargo; cualquier cambio debe hacerse aquí.
#
# debug=false + strip="symbols" reducen el binario de ~75 MB a ~3.5 MB:
#   - Pasan de cientos de segmentos PT_LOAD ELF a solo 4.
#   - El número de VMAs al arrancar cae de cientos/miles a ~20–25.
#   - Esto evita que mprotect() falle con ENOMEM al configurar el alt-signal-stack
#     del runtime de Rust (stack_overflow.rs), que se manifestaba como:
#       "failed to set up alternative stack guard page: Cannot allocate memory"
panic = "abort"
lto = "off"
opt-level = "s"
codegen-units = 1
debug = false
strip = "symbols"

[profile.dev]
opt-level = "s"
panic = "abort"

[patch.crates-io]
libc = { path = "../eclipse-relibc" }
std = { package = "eclipse_std", path = "eclipse_std" }
