[package]
name = "eclipse-libc-posix"
version = "0.1.0"
edition = "2021"

[dependencies]
eclipse-syscall = { path = "../eclipse-syscall" }

[features]
default = ["std", "panic_handler", "allocator"]
allocator = []
panic_handler = []
std = []
extra_traits = []
use_std = []
align = []
const-extern-fn = []

[lib]
name = "eclipse_libc"
path = "src/lib.rs"
crate-type = ["staticlib"]

[profile.release]
lto = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(eclipse_target)'] }

