# eclipse-relibc: C Library in Rust for Eclipse OS
# Estilo relibc (Redox) — implementación POSIX/libc sobre el microkernel Eclipse.

[package]
# name = "libc" para que [patch.crates-io] libc = { path = "..." } aplique (Cargo exige que el paquete en path se llame libc).
name = "libc"
version = "0.2.999"
edition = "2021"
description = "C Library in Rust for Eclipse OS (relibc-style)"
readme = "README.md"
license = "MIT"

[dependencies]
eclipse-syscall = { path = "../eclipse-syscall" }

[features]
default = ["std", "allocator"]
allocator = []
no-allocator = []
panic-handler = []
host-testing = []
std = []
extra_traits = []
use_std = []
align = []
const-extern-fn = []

[lib]
# name = "libc" para reemplazar libc vía [patch.crates-io] y que libc::O_RDWR etc. funcionen
name = "libc"
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.release]
lto = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(eclipse_target)'] }
