# eclipse-relibc: C Library in Rust for Eclipse OS
# Estilo relibc (Redox) — implementación POSIX/libc sobre el microkernel Eclipse.

[package]
# name = "libc" para que [patch.crates-io] libc = { path = "..." } aplique (Cargo exige que el paquete en path se llame libc).
name = "libc"
version = "0.2.999"
edition = "2021"
description = "C Library in Rust for Eclipse OS (relibc-style)"
readme = "README.md"
license = "MIT"

[dependencies]
# eclipse-syscall: solo en builds normales (no en sysroot de std donde aún no existe).
eclipse-syscall = { path = "../eclipse-syscall", optional = true }

# rustc-std-workspace-core: reemplaza 'core' en modo sysroot (rustc-dep-of-std).
# Resuelto automáticamente por rustc al compilar la sysroot; no viene de crates.io.
rustc-std-workspace-core = { version = "1.0.1", optional = true }

[features]
eclipse-syscall = ["dep:eclipse-syscall"]
default = ["std", "allocator", "eclipse-syscall"]
allocator = []
no-allocator = []
panic-handler = []
host-testing = []
std = []
extra_traits = []
use_std = []
align = []
const-extern-fn = []
# rustc-dep-of-std: mode sysroot para que Rust's std compile con eclipse-relibc.
# Activa no_core + rustc_std_workspace_core, desactiva eclipse-syscall y alloc.
# Rust's std lo pasa automáticamente: libc = { features = ["rustc-dep-of-std"] }
rustc-dep-of-std = ["dep:rustc-std-workspace-core", "align"]

[lib]
# name = "libc" para reemplazar libc vía [patch.crates-io] y que libc::O_RDWR etc. funcionen
name = "libc"
path = "src/lib.rs"
crate-type = ["rlib"]

[profile.release]
lto = false

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(eclipse_target)'] }
