[package]
name = "eclipse-syscall"
version = "0.2.0"
edition = "2021"

[dependencies]
eclipse-program-codes = { path = "../eclipse-program-codes", default-features = false }

[lib]
name = "eclipse_syscall"
path = "src/lib.rs"

[profile.release]
panic = "abort"
lto = true
opt-level = "z"
codegen-units = 1
