[package]
name = "eclipse_kernel"
version = "0.2.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Microkernel nativo de Eclipse OS escrito desde cero en Rust"

[[bin]]
name = "eclipse_kernel"
path = "src/main.rs"

[dependencies]
# Dependencias básicas para bare metal
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex"] }
nvme-oxide = { version = "0.4", default-features = false }
xhci = { version = "0.9.2", default-features = false }
x86_64 = { version = "0.14", default-features = false, features = ["abi_x86_interrupt", "inline_asm", "instructions"] }
volatile = { version = "0.2", default-features = false }
bitflags = { version = "2.4", default-features = false }
heapless = "0.8"
hash32 = "0.3"
eclipsefs-lib = { path = "../eclipsefs-lib", default-features = false, features = ["no_std"] }
linked_list_allocator = { version = "0.10.5", default-features = false, features = ["const_mut_refs", "use_spin"] }
sidewind-nvidia = { path = "../eclipse-apps/sidewind_nvidia", default-features = false }
embedded-graphics = { version = "0.8", default-features = false }

[build-dependencies]
cc = "1.0"

[features]
default = []

[profile.dev]
panic = "abort"
lto = false
opt-level = "z"
overflow-checks = false

[profile.release]
panic = "abort"
lto = false
opt-level = "z"
overflow-checks = false
codegen-units = 1
