[package]
name = "eclipsefs-fuse"
version = "0.1.0"
edition = "2021"

[dependencies]
fuse = "0.3"
libc = "0.2"
nix = { version = "0.27", features = ["user"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
byteorder = "1.4"
time = "0.1"
eclipsefs-lib = { path = "../eclipsefs-lib", features = ["std"] }
