[package]
name = "eclipsefs-lib"
version = "0.6.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Librería EclipseFS con soporte para std y no_std"
license = "MIT"

[features]
default = ["std"]
std = ["alloc", "byteorder"]
alloc = []
no_std = ["alloc"]

[dependencies]
# Dependencias siempre disponibles (necesarias para no_std)
heapless = "0.8"
hash32 = "0.3"

# Dependencias para std
byteorder = { version = "1.4", optional = true, features = ["i128"] }

# Dependencias condicionales
# [target.'cfg(not(feature = "std"))'.dependencies]
# heapless se maneja a través de features