[package]
name = "eclipsefs"
version = "0.1.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "EclipseFS userspace server for Eclipse OS microkernel"
license = "MIT"

[dependencies]
anyhow = "1.0"
eclipsefs-lib = { path = "../eclipsefs-lib", default-features = true }

[lib]
name = "eclipsefs"
path = "src/lib.rs"

[[bin]]
name = "eclipsefs-server"
path = "src/main.rs"
