[package]
name = "eclipse-installer-lib"
version = "0.6.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Librería para el instalador de Eclipse OS"
license = "MIT"

[lib]
name = "eclipse_installer_lib"
crate-type = ["lib"]
path = "src/lib.rs"

[dependencies]
# Dependencias para el sistema de archivos
# alloc es parte de la biblioteca estándar de Rust
libc = "0.2"

[features]
default = ["std"]
std = []

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
