[package]
name = "eclipse-installer"
version = "0.6.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Instalador para Eclipse OS"
license = "MIT"

[[bin]]
name = "eclipse-installer"
path = "src/main.rs"

[dependencies]
libc = "0.2"
eclipsefs-lib = { path = "../eclipsefs-lib", features = ["std"] }
eclipse-installer-lib = { path = "../installer-lib", features = ["std"] }

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
