[package]
name = "eclipse-installer"
version = "0.2.0"
edition = "2021"
authors = ["Eclipse OS Team"]
description = "Instalador para Eclipse OS"
license = "MIT"

[[bin]]
name = "eclipse-installer"
path = "src/main.rs"

[dependencies]
libc = "0.2"
eclipsefs-lib = { path = "../eclipsefs-lib", features = ["std"] }
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
walkdir = "2.4"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
