[package]
name = "mkfs-eclipsefs"
version = "2.0.0"
edition = "2021"

[dependencies]
eclipsefs-lib = { path = "../eclipsefs-lib", features = ["std"] }
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"

[[bin]]
name = "mkfs-eclipsefs"
path = "src/main.rs"

