[package]
name = "eclipse_userland"
version = "0.5.0"
edition = "2021"

[dependencies]
libm = "0.2.2"
heapless = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

[features]
default = []
alloc = []

[lib]
name = "eclipse_userland"
path = "lib.rs"

[[bin]]
name = "eclipse_userland"
path = "src/main.rs"
