[package]
name = "eclipse_userland"
version = "0.1.0"
edition = "2021"

[dependencies]
libm = "0.2.2"
heapless = "0.8"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"
# Cryptography dependencies for SecurityServer
sha2 = "0.10"
aes-gcm = "0.10"
rand = "0.8"

[features]
default = []
alloc = []

[lib]
name = "eclipse_userland"
path = "lib.rs"

[[bin]]
name = "eclipse_userland"
path = "src/main.rs"

[profile.dev]
opt-level = 0
debug = true
split-debuginfo = "unpacked"

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"
