[package]
name = "demo_client"
version = "0.1.0"
edition = "2021"

[dependencies]
eclipse-libc = { package = "eclipse-libc", path = "../../eclipse-relibc", default-features = false, features = ["std", "allocator"] }
sidewind_sdk = { path = "../sidewind_sdk" }
sidewind_core = { path = "../sidewind_core" }
embedded-graphics = "0.8.1"
micromath = "2.1.0"
