[package]
name = "eclipse_std"
version = "0.2.0"
edition = "2021"

[dependencies]
eclipse-syscall = { path = "../../eclipse-syscall" }
libc = { package = "eclipse-libc", path = "../../eclipse-relibc", default-features = false, features = ["std", "allocator"] }

[features]
default = ["panic-handler", "alloc-error-handler"]
panic-handler = []
alloc-error-handler = []
no-panic-handler = []
no-allocator = ["libc/no-allocator"]
host-testing = ["libc/host-testing", "no-panic-handler", "no-allocator"]
# Compatibilidad con std real: cuando eclipse_std coexiste con libstd (p.ej. Smithay en Linux),
# no define alloc_error_handler ni panic_handler; std los aporta. Útil para builds Linux.
std_compat = ["no-panic-handler"]
[lib]
name = "eclipse_std"
path = "src/lib.rs"

