[package]
name = "glxgears"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8"

[target.'cfg(target_vendor = "eclipse")'.dependencies]
sidewind = { path = "../sidewind" }
eclipse_ipc = { path = "../libs/ipc" }
std = { package = "eclipse_std", path = "../eclipse_std" }
eclipse-syscall = { path = "../../eclipse-syscall" }
libc = { version = "0.2", default-features = false }
