[package]
name = "glxgears"
version = "0.1.0"
edition = "2021"

[dependencies]
heapless = "0.8"
embedded-graphics = "0.8.1"
wayland-proto = { path = "../libs/wayland-proto" }
sidewind = { path = "../sidewind" }
eclipse_ipc = { path = "../libs/ipc" }
eclipse-syscall = { path = "../../eclipse-syscall" }
libc = { path = "../../eclipse-relibc" }
